--- a/wp-content/themes/mustang-lite/style.css
+++ b/wp-content/themes/mustang-lite/style.css
@@ -24,3 +24,11 @@
  *
  * @link  http://www.webmandesign.eu/manual/mustang/#child-theme
  */
+
+.nav-main .expander::before {
+    content: ">";
+}
+
+.nav-main .expander:hover::before {
+    content: "∨";
+}
