--- a/wp-content/themes/mustang-lite/style.css
+++ b/wp-content/themes/mustang-lite/style.css
@@ -31,3 +31,7 @@
     position: relative;
     padding: 20px 0;
 }
+
+[class^="icon-"]::before, [class*="icon-"]::before {
+	font-family: 'siteorigin-panels';
+}
